<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginEnd="45dp"
    android:layout_marginBottom="60dp"
    app:cardCornerRadius="20dp"
    android:elevation="100dp"
    >



    <LinearLayout
        android:weightSum="100"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <ImageView
            android:id="@+id/bottom_viewPager_imageView"
            android:layout_weight="98"
            android:layout_width="match_parent"
            android:layout_height="0dp"  />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
        <LinearLayout
            android:padding="2dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            >

        <TextView
            android:padding="2dp"
            android:id="@+id/placeName_onViewPager"
            android:gravity="center"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/single_deluxe_room"
            android:layout_marginStart="5dp"
            android:textSize="15sp"
            android:textStyle="bold"
            />
       <LinearLayout
           android:layout_width="wrap_content"
           android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/price"
                android:textSize="15sp"
                android:layout_marginBottom="5dp"
                android:textStyle="bold"
                android:layout_marginStart="5dp"
                />
            <TextView
                android:id="@+id/price_onViewPager"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="5dp"
                android:text="@string/_69999"
                android:textSize="15sp"
                android:textStyle="bold"
                />

       </LinearLayout>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bookNowButtonRoomViewPager"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="20dp"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:background="@drawable/custom_button"
            android:text="@string/book_now"
            android:textColor="@color/custom_orange"
            />
    </LinearLayout>


    </LinearLayout>
</androidx.cardview.widget.CardView>