<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.userAuthenticationScreen.RegistrationIsSuccessfulFragment">
    <View
        android:id="@+id/imageRegSuccesful"
        android:layout_width="300dp"
        android:layout_height="250dp"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/emailiconsucess"
        />
    <View
        android:id="@+id/viewCover"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/translucent_grey"
        android:elevation="100dp"
        />
    <ProgressBar
        android:visibility="gone"
        android:id="@+id/registerProgressBar"
        android:elevation="110dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/imageRegSuccesful"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:gravity="center"
        >
    <TextView
        android:id="@+id/confirm_email_congratulation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_your_email_address"
        android:layout_margin="20dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/confirm_email_congratulation"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/we_sent_an_email_to"
        android:textSize="20sp"
        android:textColor="@color/black"
        />
    <TextView
        android:id="@+id/emailFromSafeArgs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="20sp"
        android:textColor="@color/black"
        />
        <TextView
           android:layout_margin="20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/check_your_email_and_click_on_the_n_confirmation_link_to_continue"
            android:textSize="20sp"
            android:textColor="@color/black"
            />
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/resendMail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resend_email"
            android:padding="10dp"
            android:background="@drawable/custom_drawable_shadow"
            android:textSize="15sp"
            android:textColor="@color/custom_orange"
            />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/goToLogin"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/go_back_to_home"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:background="@drawable/curve_button"
        />


</androidx.constraintlayout.widget.ConstraintLayout>